present_img viewport hack

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 				<div class="col-md-6">
 					<div class="present_img">
-						<img src="images/banner.png" alt="image" style="max-width:130%; max-height:150%;">
+						<img src="images/banner.png" alt="image">
 					</div>
 				</div>
 
@@ -164,7 +164,7 @@
 
 				<div class="col-md-6">
 					<div class="features_img pull-left">
-						<img src="images/innovation.png" alt="image" style="max-width:130%; max-height:150%;">
+						<img src="images/innovation.png" alt="image">
 					</div>
 				</div>
 
@@ -211,7 +211,7 @@
 
 				<div class="col-md-7">
 					<div class="services_img">
-						<img src="images/delve.png" alt="image-1" style="max-width:130%; max-height:150%;">
+						<img src="images/delve.png" alt="image-1">
 					</div>
 
 					<!-- <div class="services_img_n">
@@ -252,7 +252,7 @@
 
 				<div class="col-md-4">
 								<div class="workng_img">
-									<img src="images/personalized.png" alt="image" style="max-width:110%; max-height:120%;">
+									<img src="images/personalized.png" alt="image">
 								</div>
 				</div>
 				<div class="col-md-4">
