--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 				<div class="col-md-6">
 					<div class="present_img">
-						<img src="images/banner.png" alt="image">
+						<img src="images/banner.png" alt="image" style="width: 64%">
 					</div>
 				</div>
 
