--- a/index.html
+++ b/index.html
@@ -97,17 +97,16 @@
 						<h1> Get Ready for<br/><b class = "header-bold">Coast 2 Coast</b></h1>
 
 						<h3> Get Paid to Play Sports. </h3>
-
-						<div class="section_btn">
-								<a href="#contact"> <img src="images/c2c/google-play.png"> </a>
-								<a href="#contact"> <img src="images/c2c/appstore.png"> </a>
-						</div>
 					</div>
 				</div>
 
 				<div class="col-md-6">
+					<div class="section_btn app-links">
+							<a href="#contact"> <img src="images/c2c/google-play.png"> </a>
+							<a href="#contact"> <img src="images/c2c/appstore.png"> </a>
+					</div>
 					<div class="present_img">
-						<img src="images/banner.png" alt="image" style="width: 64%">
+						<img src="images/banner.png" alt="image" style="width: 64%;">
 					</div>
 				</div>
 
